# hands-on-llm-projects

./: .gitignore  README.md  accelerate_config.yaml  chat.py  clip.py  fine_tuning_llm_grpo_trl.py  hello.py  pretrain.py  pyproject.toml
