[project]
name = "hands-on-llm-projects"
version = "0.1.0"
description = "Hands-on Large Language Model Projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "deepspeed>=0.16.3",
    "huggingface-hub>=0.28.1",
    "lightning>=2.5.1",
    "math-verify>=0.5.2",
    "peft>=0.14.0",
    "ruff>=0.9.6",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.19.0",
    "tensorboardx>=2.6.2.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers[torch]>=4.48.3",
    "trl>=0.14.0",
    "wandb>=0.19.6",
]
